@@ -1,3 +1,6 @@
+2001-05-20  Roland Clobus <rclobus@rclobus.nl>
+	* common/gtk/guimap.c: Prefer bridge over settlement.
+
 2011-05-14  Roland Clobus <rclobus@rclobus.nl>
 	* common/gtk/guimap.c, common/gtk/guimap.h, common/gtk/polygon.c,
 	common/gtk/polygon.h, client/gtk/identity.c: Use cairo in guimap.c
